# pidp11-hacs

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: ci.yml
custom_components/pidp11/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/pidp11/translations/: en.json
custom_components/pidp11/www/: pidp11-panel-card.js
docs/: architecture.md  diagrams.md  front-panel.md  pidp11-context.md  risks.md  roadmap.md  standalone-docker.md  testing-strategy.md
docs/contracts/: remote-console.md
docs/sprints/: README.md  S0-scaffolding.md  S1-addon-emulator.md  S2-ssh-console.md  S3-hacs-integration.md  S4-gpio-multiarch.md  S5-lamps-switches-dashboard.md
pidp11-addon/: CHANGELOG.md  DOCS.md  Dockerfile  authshim.py  build.yaml  config.yaml  patch_quickmake.py  run.sh  ssh_console.sh  zeroconf_advertise.py
pidp11-addon/systems/: selections
pidp11-addon/systems/211bsd/: boot.ini
pidp11-addon/systems/blinky/: PDP-11xx.ini
pidp11-addon/systems/dos11/: boot.ini
pidp11-addon/systems/idled/: boot.ini
scripts/: get-images.sh
tests/: conftest.py
tests/addon/: conftest.py  test_boot_selector.py  test_container_boot.py  test_gpio_mock.py  test_remote_console.py  test_ssh_access.py  test_startup_ordering.py
tests/hardware/: MANUAL-CHECKLIST.md
tests/integration/: test_authshim.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_services.py
(+15 files in other folders)
